src/app/app.component.css
*{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
}

* html #wrapper { height:100% }
 
body {height:100%; padding:0; margin:0;}

#wrapper
{
    height: 100%;
}

#inner-wrap {
    padding-bottom:50px;
    min-height: 100%;
    margin-top: 95px;
}

#inner-wrap:after {
    content:" ";
    display:block;
    clear:both;

}

* html #inner-wrap {
    height:100%;
}

#header
{
    width: 100%;
    height: 50px;
    text-align: center;
    position: fixed;
    top:0px;
    left:0;
}

#footer
{
    width: 100%;
    height: 250px;
    position:fixed;
    bottom: 0;
    left: 0;
    color: White;
    text-align: center;
}

#content
{
    width: 1000px;
    height: 100%;
    margin: 0 auto 0 auto;
}

